src/main/java/runner/TestsParser.java
// Generated from Tests.g4 by ANTLR 4.8

    package runner;
    import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TestsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		LET=18, ALL_PROJ_EXISTS=19, IOM=20, BOUND=21, ON=22, NOT=23, PROJECTION=24, 
		EXISTS_PROJ=25, END=26, DEPTH=27, FINITE=28, PLAYER=29, IN=30, WELL_FORMED=31, 
		PROJ=32, TYPE=33, HAS=34, PART=35, ATTRIBUTE_PROCESS=36, ATTRIBUTE_QUEUE=37, 
		ATTRIBUTE_TYPE=38, ATTRIBUTE_SESSION=39, TOKEN_IDENTIFIER=40, COMMENT=41, 
		WS=42;
	public static final int
		RULE_interactive = 0, RULE_let = 1, RULE_prog = 2, RULE_test_group_name = 3, 
		RULE_test_group = 4, RULE_test_name = 5, RULE_test = 6, RULE_queries = 7, 
		RULE_query = 8, RULE_all_proj_exists = 9, RULE_iom = 10, RULE_boundness = 11, 
		RULE_projection_assert = 12, RULE_projection_exists = 13, RULE_well_formdness = 14, 
		RULE_typing = 15, RULE_declaration = 16, RULE_parenthesis_session = 17, 
		RULE_parenthesis_queue = 18, RULE_queue = 19, RULE_session = 20, RULE_global_type = 21, 
		RULE_head_type = 22, RULE_tail_type = 23, RULE_process = 24, RULE_tail_process = 25, 
		RULE_head_process = 26, RULE_parenthesis_type = 27, RULE_parenthesis_process = 28, 
		RULE_participant = 29, RULE_label = 30, RULE_variableSession = 31, RULE_variableQueue = 32, 
		RULE_variableType = 33, RULE_variableProcess = 34, RULE_value = 35, RULE_variable = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"interactive", "let", "prog", "test_group_name", "test_group", "test_name", 
			"test", "queries", "query", "all_proj_exists", "iom", "boundness", "projection_assert", 
			"projection_exists", "well_formdness", "typing", "declaration", "parenthesis_session", 
			"parenthesis_queue", "queue", "session", "global_type", "head_type", 
			"tail_type", "process", "tail_process", "head_process", "parenthesis_type", 
			"parenthesis_process", "participant", "label", "variableSession", "variableQueue", 
			"variableType", "variableProcess", "value", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'{'", "'}'", "'|'", "'('", "','", "')'", "'=='", 
			"'='", "'Empty'", "'<'", "'>'", "'!'", "'?'", "';'", "'0'", "'let'", 
			"'exist-all-proj'", "'io-match'", "'bounded'", "'on'", "'not'", "'projection'", 
			"'exists-proj'", "'End'", "'depth'", "'finite'", "'player'", "'in'", 
			"'wf'", "'proj'", "'type'", "'has'", "'part'", "'Process'", "'Queue'", 
			"'GlobalType'", "'Session'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "LET", "ALL_PROJ_EXISTS", "IOM", 
			"BOUND", "ON", "NOT", "PROJECTION", "EXISTS_PROJ", "END", "DEPTH", "FINITE", 
			"PLAYER", "IN", "WELL_FORMED", "PROJ", "TYPE", "HAS", "PART", "ATTRIBUTE_PROCESS", 
			"ATTRIBUTE_QUEUE", "ATTRIBUTE_TYPE", "ATTRIBUTE_SESSION", "TOKEN_IDENTIFIER", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tests.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TestsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InteractiveContext extends ParserRuleContext {
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public InteractiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interactive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitInteractive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InteractiveContext interactive() throws RecognitionException {
		InteractiveContext _localctx = new InteractiveContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_interactive);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				let();
				}
				break;
			case T__5:
			case ALL_PROJ_EXISTS:
			case IOM:
			case BOUND:
			case NOT:
			case EXISTS_PROJ:
			case WELL_FORMED:
			case PROJ:
			case TOKEN_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				query();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(TestsParser.LET, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public LetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitLet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetContext let() throws RecognitionException {
		LetContext _localctx = new LetContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_let);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(LET);
			setState(79);
			match(T__0);
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				declaration();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATTRIBUTE_PROCESS) | (1L << ATTRIBUTE_QUEUE) | (1L << ATTRIBUTE_TYPE) | (1L << ATTRIBUTE_SESSION))) != 0) );
			setState(85);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public List<Test_group_nameContext> test_group_name() {
			return getRuleContexts(Test_group_nameContext.class);
		}
		public Test_group_nameContext test_group_name(int i) {
			return getRuleContext(Test_group_nameContext.class,i);
		}
		public List<Test_groupContext> test_group() {
			return getRuleContexts(Test_groupContext.class);
		}
		public Test_groupContext test_group(int i) {
			return getRuleContext(Test_groupContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				test_group_name();
				setState(88);
				match(T__0);
				setState(89);
				test_group();
				setState(90);
				match(T__1);
				}
				}
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TOKEN_IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Test_group_nameContext extends ParserRuleContext {
		public TerminalNode TOKEN_IDENTIFIER() { return getToken(TestsParser.TOKEN_IDENTIFIER, 0); }
		public Test_group_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_group_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitTest_group_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_group_nameContext test_group_name() throws RecognitionException {
		Test_group_nameContext _localctx = new Test_group_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_test_group_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(TOKEN_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Test_groupContext extends ParserRuleContext {
		public List<Test_nameContext> test_name() {
			return getRuleContexts(Test_nameContext.class);
		}
		public Test_nameContext test_name(int i) {
			return getRuleContext(Test_nameContext.class,i);
		}
		public List<TestContext> test() {
			return getRuleContexts(TestContext.class);
		}
		public TestContext test(int i) {
			return getRuleContext(TestContext.class,i);
		}
		public Test_groupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_group; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitTest_group(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_groupContext test_group() throws RecognitionException {
		Test_groupContext _localctx = new Test_groupContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_test_group);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				test_name();
				setState(99);
				match(T__2);
				setState(100);
				test();
				setState(101);
				match(T__3);
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TOKEN_IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Test_nameContext extends ParserRuleContext {
		public TerminalNode TOKEN_IDENTIFIER() { return getToken(TestsParser.TOKEN_IDENTIFIER, 0); }
		public Test_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitTest_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Test_nameContext test_name() throws RecognitionException {
		Test_nameContext _localctx = new Test_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_test_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(TOKEN_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public QueriesContext queries() {
			return getRuleContext(QueriesContext.class,0);
		}
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitTest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_test);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			declaration();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ATTRIBUTE_PROCESS) | (1L << ATTRIBUTE_QUEUE) | (1L << ATTRIBUTE_TYPE) | (1L << ATTRIBUTE_SESSION))) != 0)) {
				{
				{
				setState(110);
				declaration();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			queries();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueriesContext extends ParserRuleContext {
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public QueriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queries; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitQueries(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueriesContext queries() throws RecognitionException {
		QueriesContext _localctx = new QueriesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_queries);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			query();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << ALL_PROJ_EXISTS) | (1L << IOM) | (1L << BOUND) | (1L << NOT) | (1L << EXISTS_PROJ) | (1L << WELL_FORMED) | (1L << PROJ) | (1L << TOKEN_IDENTIFIER))) != 0)) {
				{
				{
				setState(119);
				query();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public Projection_assertContext projection_assert() {
			return getRuleContext(Projection_assertContext.class,0);
		}
		public Projection_existsContext projection_exists() {
			return getRuleContext(Projection_existsContext.class,0);
		}
		public TypingContext typing() {
			return getRuleContext(TypingContext.class,0);
		}
		public Well_formdnessContext well_formdness() {
			return getRuleContext(Well_formdnessContext.class,0);
		}
		public BoundnessContext boundness() {
			return getRuleContext(BoundnessContext.class,0);
		}
		public IomContext iom() {
			return getRuleContext(IomContext.class,0);
		}
		public All_proj_existsContext all_proj_exists() {
			return getRuleContext(All_proj_existsContext.class,0);
		}
		public TerminalNode NOT() { return getToken(TestsParser.NOT, 0); }
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_query);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROJ:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				projection_assert();
				}
				break;
			case EXISTS_PROJ:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				projection_exists();
				}
				break;
			case T__5:
			case TOKEN_IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				typing();
				}
				break;
			case WELL_FORMED:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				well_formdness();
				}
				break;
			case BOUND:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				boundness();
				}
				break;
			case IOM:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				iom();
				}
				break;
			case ALL_PROJ_EXISTS:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				all_proj_exists();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 8);
				{
				setState(132);
				match(NOT);
				setState(133);
				query();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class All_proj_existsContext extends ParserRuleContext {
		public TerminalNode ALL_PROJ_EXISTS() { return getToken(TestsParser.ALL_PROJ_EXISTS, 0); }
		public Parenthesis_typeContext parenthesis_type() {
			return getRuleContext(Parenthesis_typeContext.class,0);
		}
		public All_proj_existsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_all_proj_exists; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitAll_proj_exists(this);
			else return visitor.visitChildren(this);
		}
	}

	public final All_proj_existsContext all_proj_exists() throws RecognitionException {
		All_proj_existsContext _localctx = new All_proj_existsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_all_proj_exists);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(ALL_PROJ_EXISTS);
			setState(137);
			parenthesis_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IomContext extends ParserRuleContext {
		public TerminalNode IOM() { return getToken(TestsParser.IOM, 0); }
		public Parenthesis_typeContext parenthesis_type() {
			return getRuleContext(Parenthesis_typeContext.class,0);
		}
		public Parenthesis_queueContext parenthesis_queue() {
			return getRuleContext(Parenthesis_queueContext.class,0);
		}
		public IomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitIom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IomContext iom() throws RecognitionException {
		IomContext _localctx = new IomContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_iom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(IOM);
			setState(140);
			parenthesis_type();
			setState(141);
			match(T__4);
			setState(142);
			parenthesis_queue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoundnessContext extends ParserRuleContext {
		public TerminalNode BOUND() { return getToken(TestsParser.BOUND, 0); }
		public Parenthesis_typeContext parenthesis_type() {
			return getRuleContext(Parenthesis_typeContext.class,0);
		}
		public BoundnessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boundness; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitBoundness(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoundnessContext boundness() throws RecognitionException {
		BoundnessContext _localctx = new BoundnessContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_boundness);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(BOUND);
			setState(145);
			parenthesis_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Projection_assertContext extends ParserRuleContext {
		public TerminalNode PROJ() { return getToken(TestsParser.PROJ, 0); }
		public Parenthesis_typeContext parenthesis_type() {
			return getRuleContext(Parenthesis_typeContext.class,0);
		}
		public ParticipantContext participant() {
			return getRuleContext(ParticipantContext.class,0);
		}
		public Parenthesis_processContext parenthesis_process() {
			return getRuleContext(Parenthesis_processContext.class,0);
		}
		public Projection_assertContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projection_assert; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitProjection_assert(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Projection_assertContext projection_assert() throws RecognitionException {
		Projection_assertContext _localctx = new Projection_assertContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_projection_assert);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(PROJ);
			setState(148);
			match(T__5);
			setState(149);
			parenthesis_type();
			setState(150);
			match(T__6);
			setState(151);
			participant();
			setState(152);
			match(T__7);
			setState(153);
			match(T__8);
			setState(154);
			parenthesis_process();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Projection_existsContext extends ParserRuleContext {
		public TerminalNode EXISTS_PROJ() { return getToken(TestsParser.EXISTS_PROJ, 0); }
		public Parenthesis_typeContext parenthesis_type() {
			return getRuleContext(Parenthesis_typeContext.class,0);
		}
		public ParticipantContext participant() {
			return getRuleContext(ParticipantContext.class,0);
		}
		public Projection_existsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projection_exists; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitProjection_exists(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Projection_existsContext projection_exists() throws RecognitionException {
		Projection_existsContext _localctx = new Projection_existsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_projection_exists);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(EXISTS_PROJ);
			setState(157);
			match(T__5);
			setState(158);
			parenthesis_type();
			setState(159);
			match(T__6);
			setState(160);
			participant();
			setState(161);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Well_formdnessContext extends ParserRuleContext {
		public TerminalNode WELL_FORMED() { return getToken(TestsParser.WELL_FORMED, 0); }
		public Parenthesis_typeContext parenthesis_type() {
			return getRuleContext(Parenthesis_typeContext.class,0);
		}
		public Parenthesis_queueContext parenthesis_queue() {
			return getRuleContext(Parenthesis_queueContext.class,0);
		}
		public Well_formdnessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_well_formdness; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TestsVisitor ) return ((TestsVisitor<? extends T>)visitor).visitWell_formdness(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Well_formdnessContext well_formdness() throws RecognitionException {
		Well_formdnessContext _localctx = new Well_formdnessContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_well_formdness);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(WELL_FORMED);
			setState(164);
			parenthesis_type();
			setState(165);
			match(T__4);
			setState(166);
			parenthesis_queue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
